devel
-----

* Fixed a bug in maintainer mode sorting followerinfo lists the wrong way.

* Limit value of `--rocksdb.block-cache-size` to 1 GB for agent instances to
  reduce agency RAM usage, unless configured otherwise. In addition, limit the 
  value of `--rocksdb.total-write-buffer-size` to 512 MB on agent instances for
  the same reason.

* Fixed issue #13238 Thread naming API on Windows are now used only if
  available in KERNEL32.DLL

* When querying the list of currently running or slow AQL queries, ignore not-yet
  created databases on other coordinators.

* Added support for fetching the list of currently running and slow AQL queries
  from all databases at once, by adding an `all` parameter to the following
  query APIs:

  * `require("@arangodb/aql/queries").current({ all: true })`: will return the
    currently running queries from all databases, not just the currently
    selected database.
  * HTTP GET `/_api/query/current?all=true`: same, but for the HTTP REST API.
  * `require("@arangodb/aql/queries").slow({ all: true })`: will return the
    slow query history from all databases, not just the currently selected
    database.
  * HTTP GET `/_api/query/slow?all=true`: same, but for the HTTP REST API.
  * `require("@arangodb/aql/queries").clearSlow({ all: true })`: will clear
    the slow query history for all databases, not just the currently selected
    database.
  * HTTP DELETE `/_api/query/slow?all=true`: same, but for the HTTP REST API.

  Using the `all` parameter is only allowed when making the call inside the
  `_system` database and with superuser privileges.
  
* Improve performance and memory efficiency of agency restart from persisted
  database directory.

* Added the following agency-related metrics:
  - `arangodb_agency_client_lookup_table_size`: current number of entries
    in agency client id lookup table. This gauge is available only on
    agent instances.
  - `arangodb_agency_cache_callback_count`: current number of entries in