@@ -1,6 +1,9 @@
 devel
 -----
 
+* Added "startupTime", "computationTime" and "storageTime" to Pregel result
+  statistics.
+
 * Fixed a bug in maintainer mode sorting followerinfo lists the wrong way.
 
 * Limit value of `--rocksdb.block-cache-size` to 1 GB for agent instances to
